Clean ups.
- maven-checkstyle-plugin 3.1.1 -> 3.1.2.
- checkstyle -> 9.0
- Updates for 21st century.
- No need to nest else clause.
- Use simple array declarations.
- Use valueOf instead of new for Numbers.
- Consistent formatting.
- Remove some inline comments //-----...