@@ -37,13 +37,12 @@ import org.junit.Test;
  * Test case for the PatternOptionBuilder class.
  */
 @SuppressWarnings("deprecation") // tests some deprecated classes
-public class PatternOptionBuilderTest
-{
+public class PatternOptionBuilderTest {
     @Test
-    public void testSimplePattern() throws Exception
-    {
+    public void testSimplePattern() throws Exception {
         final Options options = PatternOptionBuilder.parsePattern("a:b@cde>f+n%t/m*z#");
-        final String[] args = new String[] {"-c", "-a", "foo", "-b", "java.util.Vector", "-e", "build.xml", "-f", "java.util.Calendar", "-n", "4.5", "-t", "https://commons.apache.org", "-z", "Thu Jun 06 17:48:57 EDT 2002", "-m", "test*"};
+        final String[] args = {"-c", "-a", "foo", "-b", "java.util.Vector", "-e", "build.xml", "-f", "java.util.Calendar", "-n", "4.5", "-t",
+            "https://commons.apache.org", "-z", "Thu Jun 06 17:48:57 EDT 2002", "-m", "test*"};
 
         final CommandLineParser parser = new PosixParser();
         final CommandLine line = parser.parse(options, args);
@@ -55,7 +54,7 @@ public class PatternOptionBuilderTest
         assertFalse("boolean false flag d", line.hasOption("d"));
         assertEquals("file flag e", new File("build.xml"), line.getOptionObject("e"));
         assertEquals("class flag f", Calendar.class, line.getOptionObject("f"));
-        assertEquals("number flag n", new Double(4.5), line.getOptionObject("n"));
+        assertEquals("number flag n", Double.valueOf(4.5), line.getOptionObject("n"));
         assertEquals("url flag t", new URL("https://commons.apache.org"), line.getOptionObject("t"));
 
         // tests the char methods of CommandLine that delegate to the String methods
@@ -66,14 +65,14 @@ public class PatternOptionBuilderTest
         assertFalse("boolean false flag d", line.hasOption('d'));
         assertEquals("file flag e", new File("build.xml"), line.getOptionObject('e'));
         assertEquals("class flag f", Calendar.class, line.getOptionObject('f'));
-        assertEquals("number flag n", new Double(4.5), line.getOptionObject('n'));
+        assertEquals("number flag n", Double.valueOf(4.5), line.getOptionObject('n'));
         assertEquals("url flag t", new URL("https://commons.apache.org"), line.getOptionObject('t'));
 
         // FILES NOT SUPPORTED YET
         try {
             assertEquals("files flag m", new File[0], line.getOptionObject('m'));
             fail("Multiple files are not supported yet, should have failed");
-        } catch(final UnsupportedOperationException uoe) {
+        } catch (final UnsupportedOperationException uoe) {
             // expected
         }
 
@@ -81,24 +80,22 @@ public class PatternOptionBuilderTest
         try {
             assertEquals("date flag z", new Date(1023400137276L), line.getOptionObject('z'));
             fail("Date is not supported yet, should have failed");
-        } catch(final UnsupportedOperationException uoe) {
+        } catch (final UnsupportedOperationException uoe) {
             // expected
         }
     }
 
     @Test
-    public void testEmptyPattern() throws Exception
-    {
+    public void testEmptyPattern() throws Exception {
         final Options options = PatternOptionBuilder.parsePattern("");
         assertTrue(options.getOptions().isEmpty());
     }
 
     @Test
-    public void testUntypedPattern() throws Exception
-    {
+    public void testUntypedPattern() throws Exception {
         final Options options = PatternOptionBuilder.parsePattern("abc");
         final CommandLineParser parser = new PosixParser();
-        final CommandLine line = parser.parse(options, new String[] { "-abc" });
+        final CommandLine line = parser.parse(options, new String[] {"-abc"});
 
         assertTrue(line.hasOption('a'));
         assertNull("value a", line.getOptionObject('a'));
@@ -109,38 +106,35 @@ public class PatternOptionBuilderTest
     }
 
     @Test
-    public void testNumberPattern() throws Exception
-    {
+    public void testNumberPattern() throws Exception {
         final Options options = PatternOptionBuilder.parsePattern("n%d%x%");
         final CommandLineParser parser = new PosixParser();
-        final CommandLine line = parser.parse(options, new String[] { "-n", "1", "-d", "2.1", "-x", "3,5" });
+        final CommandLine line = parser.parse(options, new String[] {"-n", "1", "-d", "2.1", "-x", "3,5"});
 
         assertEquals("n object class", Long.class, line.getOptionObject("n").getClass());
-        assertEquals("n value", new Long(1), line.getOptionObject("n"));
+        assertEquals("n value", Long.valueOf(1), line.getOptionObject("n"));
 
         assertEquals("d object class", Double.class, line.getOptionObject("d").getClass());
-        assertEquals("d value", new Double(2.1), line.getOptionObject("d"));
+        assertEquals("d value", Double.valueOf(2.1), line.getOptionObject("d"));
 
         assertNull("x object", line.getOptionObject("x"));
     }
 
     @Test
-    public void testClassPattern() throws Exception
-    {
+    public void testClassPattern() throws Exception {
         final Options options = PatternOptionBuilder.parsePattern("c+d+");
         final CommandLineParser parser = new PosixParser();
-        final CommandLine line = parser.parse(options, new String[] { "-c", "java.util.Calendar", "-d", "System.DateTime" });
+        final CommandLine line = parser.parse(options, new String[] {"-c", "java.util.Calendar", "-d", "System.DateTime"});
 
         assertEquals("c value", Calendar.class, line.getOptionObject("c"));
         assertNull("d value", line.getOptionObject("d"));
     }
 
     @Test
-    public void testObjectPattern() throws Exception
-    {
+    public void testObjectPattern() throws Exception {
         final Options options = PatternOptionBuilder.parsePattern("o@i@n@");
         final CommandLineParser parser = new PosixParser();
-        final CommandLine line = parser.parse(options, new String[] { "-o", "java.lang.String", "-i", "java.util.Calendar", "-n", "System.DateTime" });
+        final CommandLine line = parser.parse(options, new String[] {"-o", "java.lang.String", "-i", "java.util.Calendar", "-n", "System.DateTime"});
 
         assertEquals("o value", "", line.getOptionObject("o"));
         assertNull("i value", line.getOptionObject("i"));
@@ -148,22 +142,20 @@ public class PatternOptionBuilderTest
     }
 
     @Test
-    public void testURLPattern() throws Exception
-    {
+    public void testURLPattern() throws Exception {
         final Options options = PatternOptionBuilder.parsePattern("u/v/");
         final CommandLineParser parser = new PosixParser();
-        final CommandLine line = parser.parse(options, new String[] { "-u", "https://commons.apache.org", "-v", "foo://commons.apache.org" });
+        final CommandLine line = parser.parse(options, new String[] {"-u", "https://commons.apache.org", "-v", "foo://commons.apache.org"});
 
         assertEquals("u value", new URL("https://commons.apache.org"), line.getOptionObject("u"));
         assertNull("v value", line.getOptionObject("v"));
     }
 
     @Test
-    public void testExistingFilePattern() throws Exception
-    {
+    public void testExistingFilePattern() throws Exception {
         final Options options = PatternOptionBuilder.parsePattern("g<");
         final CommandLineParser parser = new PosixParser();
-        final CommandLine line = parser.parse(options, new String[] { "-g", "src/test/resources/org/apache/commons/cli/existing-readable.file" });
+        final CommandLine line = parser.parse(options, new String[] {"-g", "src/test/resources/org/apache/commons/cli/existing-readable.file"});
 
         final Object parsedReadableFileStream = line.getOptionObject("g");
 
@@ -175,24 +167,20 @@ public class PatternOptionBuilderTest
     public void testExistingFilePatternFileNotExist() throws Exception {
         final Options options = PatternOptionBuilder.parsePattern("f<");
         final CommandLineParser parser = new PosixParser();
-        final CommandLine line = parser.parse(options, new String[] { "-f", "non-existing.file" });
+        final CommandLine line = parser.parse(options, new String[] {"-f", "non-existing.file"});
 
         assertNull("option f parsed", line.getOptionObject("f"));
     }
 
     @Test
-    public void testRequiredOption() throws Exception
-    {
+    public void testRequiredOption() throws Exception {
         final Options options = PatternOptionBuilder.parsePattern("!n%m%");
         final CommandLineParser parser = new PosixParser();
 
-        try
-        {
-            parser.parse(options, new String[]{""});
+        try {
+            parser.parse(options, new String[] {""});
             fail("MissingOptionException wasn't thrown");
-        }
-        catch (final MissingOptionException e)
-        {
+        } catch (final MissingOptionException e) {
             assertEquals(1, e.getMissingOptions().size());
             assertTrue(e.getMissingOptions().contains("n"));
         }
